<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:mtplview="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_view_setting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    android:orientation="vertical"
    tools:context="backuprestore.udr.rk.allbackuprestore.view.ViewSetting">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:elevation="6dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"

        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <android.support.v7.widget.CardView
        android:id="@+id/calendarView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_5dp"
        app:cardBackgroundColor="@color/bgColor">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <backuprestore.udr.rk.allbackuprestore.mtplview.MtplTextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_10dp"
                android:text="@string/changepath"
                android:textColor="@color/textColor"
                android:textSize="15sp"

                mtplview:TypeFace="@string/FontFace_DroidSerif_Bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary" />

            <LinearLayout
                android:id="@+id/selectPathLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/margin_10dp">

                <backuprestore.udr.rk.allbackuprestore.mtplview.MtplTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/savedback"
                    android:textColor="@color/textColor"
                    android:textSize="14sp"
                    mtplview:TypeFace="@string/FontFace_DroidSerif_Bold" />

                <backuprestore.udr.rk.allbackuprestore.mtplview.MtplTextView
                    android:id="@+id/txtSelectpath"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="choose path"
                    android:textColor="@color/textColor"
                    android:textSize="12sp"
                    mtplview:TypeFace="@string/FontFace_DroidSerif_Regular" />


            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/bgColor">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <backuprestore.udr.rk.allbackuprestore.mtplview.MtplTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_10dp"
                android:text="@string/backint"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                mtplview:TypeFace="@string/FontFace_DroidSerif_Bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/margin_10dp">

                <backuprestore.udr.rk.allbackuprestore.mtplview.MtplTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/interman"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    mtplview:TypeFace="@string/FontFace_DroidSerif_Bold" />

                <backuprestore.udr.rk.allbackuprestore.mtplview.MtplTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/tab"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"
                    mtplview:TypeFace="@string/FontFace_DroidSerif_Regular" />


            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/bgColor">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <backuprestore.udr.rk.allbackuprestore.mtplview.MtplTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_10dp"
                android:text="@string/advan"
                android:textColor="@color/textColor"
                android:textSize="15sp"
                mtplview:TypeFace="@string/FontFace_DroidSerif_Bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/margin_10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <backuprestore.udr.rk.allbackuprestore.mtplview.MtplTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/cloundupload"
                            android:textColor="@color/textColor"
                            android:textSize="14sp"
                            mtplview:TypeFace="@string/FontFace_DroidSerif_Bold" />

                        <backuprestore.udr.rk.allbackuprestore.mtplview.MtplTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:text="@string/showDilog"
                            android:textColor="@color/textColor"
                            android:textSize="12sp"
                            mtplview:TypeFace="@string/FontFace_DroidSerif_Regular" />
                    </LinearLayout>

                    <CheckBox
                        android:id="@+id/checkboxCloud"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:theme="@style/MyCheckBox" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@android:color/darker_gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <backuprestore.udr.rk.allbackuprestore.mtplview.MtplTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/notif"
                            android:textColor="@color/textColor"
                            android:textSize="14sp"
                            mtplview:TypeFace="@string/FontFace_DroidSerif_Bold" />

                        <backuprestore.udr.rk.allbackuprestore.mtplview.MtplTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:text="@string/ininoti"
                            android:textColor="@color/textColor"
                            android:textSize="12sp"
                            mtplview:TypeFace="@string/FontFace_DroidSerif_Regular" />
                    </LinearLayout>

                    <CheckBox
                        android:id="@+id/checkboxNoti"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:theme="@style/MyCheckBox" />
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
