<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:mtplview="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_smsview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    android:orientation="vertical"

    android:weightSum="1"
    tools:context="backuprestore.udr.rk.allbackuprestore.view.ViewSms">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <LinearLayout

        android:id="@+id/backupLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/margin_10dp">

        <ImageView
            android:layout_width="@dimen/margin_40dp"
            android:layout_height="@dimen/margin_40dp"
            android:src="@drawable/backup" />

        <backuprestore.udr.rk.allbackuprestore.mtplview.MtplTextView
            android:id="@+id/mtplTextView4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/backup"
            android:textColor="@color/textColor"
            mtplview:TypeFace="@string/FontFace_DroidSerif_Bold" />

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary" />

    <LinearLayout

        android:id="@+id/restoreLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/margin_10dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="@dimen/margin_40dp"
            android:layout_height="@dimen/margin_40dp"
            android:src="@drawable/restore" />

        <backuprestore.udr.rk.allbackuprestore.mtplview.MtplTextView
            android:id="@+id/mtplTextView13"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/restoretorestore"
            android:textColor="@color/textColor"
            mtplview:TypeFace="@string/FontFace_DroidSerif_Bold" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary" />

    <LinearLayout
        android:id="@+id/viewBackupLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/margin_10dp">

        <ImageView
            android:layout_width="@dimen/margin_40dp"
            android:layout_height="@dimen/margin_40dp"
            android:src="@drawable/viewbackup" />

        <backuprestore.udr.rk.allbackuprestore.mtplview.MtplTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/viewbackup"
            android:textColor="@color/textColor"
            mtplview:TypeFace="@string/FontFace_DroidSerif_Bold" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary" />

    <LinearLayout
        android:id="@+id/sendToCloudLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal"
        android:padding="@dimen/margin_10dp">

        <ImageView
            android:layout_width="@dimen/margin_40dp"
            android:layout_height="@dimen/margin_40dp"
            android:src="@drawable/sendcloud" />

        <backuprestore.udr.rk.allbackuprestore.mtplview.MtplTextView
            android:id="@+id/mtplTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sendtocloud"
            android:textColor="@color/textColor"
            mtplview:TypeFace="@string/FontFace_DroidSerif_Bold" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary" />

    <LinearLayout
        android:id="@+id/deleteBackup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/margin_10dp">

        <ImageView
            android:layout_width="@dimen/margin_40dp"
            android:layout_height="@dimen/margin_40dp"

            android:src="@drawable/del" />

        <backuprestore.udr.rk.allbackuprestore.mtplview.MtplTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/deletebackup"
            android:textColor="@color/textColor"
            mtplview:TypeFace="@string/FontFace_DroidSerif_Bold" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary" />

    <LinearLayout
        android:id="@+id/deleteMrakLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/margin_10dp"
        android:visibility="gone">

        <ImageView
            android:layout_width="@dimen/margin_40dp"
            android:layout_height="@dimen/margin_40dp"
            android:src="@drawable/del" />

        <backuprestore.udr.rk.allbackuprestore.mtplview.MtplTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/deletebookmark"
            android:textColor="@color/textColor"
            mtplview:TypeFace="@string/FontFace_DroidSerif_Bold" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"
        android:visibility="gone" />
</LinearLayout>
